--- a/GarageSaleApp.UwpApp/App.xaml
+++ b/GarageSaleApp.UwpApp/App.xaml
@@ -3,6 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GarageSaleApp.UwpApp"
+    xmlns:vm="using:GarageSaleApp.UwpApp.ViewModels"
     RequestedTheme="Light">
+    <Application.Resources>
 
+        <vm:ViewModelLocator x:Key="ViewModelLocator" />
+
+    </Application.Resources>
 </Application>
