add efcore, entity framework

--- a/GarageSaleApp.UwpApp/Views/DashboardView.xaml
+++ b/GarageSaleApp.UwpApp/Views/DashboardView.xaml
@@ -11,5 +11,12 @@
 
     <Grid>
         <Button Command="{Binding NewGarageSaleCommand}">New Garage Sale</Button>
+        <ListView ItemsSource="{Binding GarageSaleEvents}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
